syntax = "proto3";
package models;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "models";
option (gogoproto.sizer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

enum Status {
  CREATED = 0;
}

message App {
  string name       = 1 [(gogoproto.moretags) = "datastore:\"name\""];
  Status status     = 2 [(gogoproto.moretags) = "datastore:\"status\""];
  string release_id = 3 [(gogoproto.moretags) = "datastore:\"release_id\""];
  string endpoint   = 4 [(gogoproto.moretags) = "datastore:\"endpoint\""];
}

message Build {
  string id        = 1 [(gogoproto.moretags) = "datastore:\"id\""];
  string app       = 2 [(gogoproto.moretags) = "datastore:\"app\""];
  string remote_id = 3 [(gogoproto.moretags) = "datastore:\"remote_id\""];
  Status status    = 4 [(gogoproto.moretags) = "datastore:\"status\""];
  int32 created_at = 5 [(gogoproto.moretags) = "datastore:\"created_at\""];
}

message Release {
  string id        = 1 [(gogoproto.moretags) = "datastore:\"id\""];
  string app       = 2 [(gogoproto.moretags) = "datastore:\"app\""];
  string build_id  = 3 [(gogoproto.moretags) = "datastore:\"build_id\""];
  Status status    = 4 [(gogoproto.moretags) = "datastore:\"status\""];
  int32 created_at = 5 [(gogoproto.moretags) = "datastore:\"created_at\""];
}


message Resource {
  string name                   = 1 [(gogoproto.moretags) = "datastore:\"name\""];
  Status status                 = 2 [(gogoproto.moretags) = "datastore:\"status\""];
  string kind                   = 3 [(gogoproto.moretags) = "datastore:\"kind\""];
  string URL                    = 4 [(gogoproto.moretags) = "datastore:\"URL\""];
  repeated string apps          = 5 [(gogoproto.moretags) = "datastore:\"apps\""];
  bytes exports                 = 6 [(gogoproto.moretags) = "datastore:\"exports\""];
  bytes parameters              = 7 [(gogoproto.moretags) = "datastore:\"parameters\""];
}

message ResourceVar {
  string key   = 1;
  string value = 2;
}

message EnvConfig {
  map<string,string> data = 1;
}